objects/fferpcore__TaxDetail__c.object
<CustomObject>
    <customHelpPage>fferpcore__TaxDetailHelp</customHelpPage>
    <description>Stores sales and use tax details by jurisdiction for specific billing document line items.</description>
    <fields>
        <fullName>fferpcore__BillingDocumentLineItem__c</fullName>
        <description>Billing document line item to which this tax breakdown relates.</description>
        <label>Billing Document Line Item</label>
        <referenceTo>fferpcore__BillingDocumentLineItem__c</referenceTo>
        <relationshipLabel>Tax Jurisdiction Breakdown</relationshipLabel>
        <relationshipName>TaxDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>fferpcore__BillingDocument__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing document to which this tax breakdown relates.</description>
        <label>Billing Document</label>
        <referenceTo>fferpcore__BillingDocument__c</referenceTo>
        <relationshipLabel>Tax Jurisdiction Breakdown</relationshipLabel>
        <relationshipName>TaxDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>fferpcore__Country__c</fullName>
        <description>Country of the tax jurisdiction.</description>
        <label>Country</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__JurisdictionCode__c</fullName>
        <description>Code of the tax jurisdiction.</description>
        <label>Jurisdiction Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__JurisdictionName__c</fullName>
        <description>Name of the tax jurisdiction.</description>
        <label>Jurisdiction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__JurisdictionType__c</fullName>
        <description>Type of the tax jurisdiction.</description>
        <label>Jurisdiction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Rate__c</fullName>
        <description>Tax rate for the tax jurisdiction.</description>
        <label>Rate</label>
        <precision>9</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Region__c</fullName>
        <description>Region of the tax jurisdiction.</description>
        <label>Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__TaxName__c</fullName>
        <description>Name of the tax.</description>
        <label>Tax Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__Tax__c</fullName>
        <description>Tax amount for the jurisdiction.</description>
        <label>Tax</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>fferpcore__Taxable__c</fullName>
        <description>The amount that is taxable.</description>
        <label>Taxable Value</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <label>Tax Breakdown</label>
    <nameField>
        <displayFormat>TB{0000000}</displayFormat>
        <label>Tax Breakdown ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax Breakdowns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>